committing failing test for chain

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "burrito": "*",
     "macrojs": "*",
     "modulate": "*",
+    "sugar": "*",
   },
   "devDependencies": {
     "should": "*",
